--- a/roq-frontmatter/deployment/src/test/resources/site/_posts/awesome-post.html
+++ b/roq-frontmatter/deployment/src/test/resources/site/_posts/awesome-post.html
@@ -4,6 +4,7 @@ title: My Cool Post
 slug: awesome-post
 description: this is a very awesome post
 foo: bar
+date: 2024-09-10 10:45:00 +0200
 ---
 <h1>A cool blog post</h1>
 <p>{page.foo}</p>
