Move collections to site

--- a/roq-frontmatter/deployment/src/test/resources/site/index.html
+++ b/roq-frontmatter/deployment/src/test/resources/site/index.html
@@ -9,7 +9,7 @@ paginate: posts
 ---
 
 <div>
-  {#for post in collections.posts.paginated(page.paginator)}
+  {#for post in site.collections.posts.paginated(page.paginator)}
     <h1>{post.id}</h1>
   {/for}
 </div>
