--- a/roq-frontmatter/deployment/src/test/resources/site/_posts/awesome-post.html
+++ b/roq-frontmatter/deployment/src/test/resources/site/_posts/awesome-post.html
@@ -7,4 +7,4 @@ foo: bar
 date: 2024-09-10 10:45:00 +0200
 ---
 <h1>A cool blog post</h1>
-<p>{page.foo} {cdi:foo.var1}</p>
+<p>{page.data.foo} {cdi:foo.var1}</p>
