Copy highlight post

--- a/roq/runtime/src/main/codestarts/quarkus/roq-codestart/base/content/pages/about.html
+++ b/roq/runtime/src/main/codestarts/quarkus/roq-codestart/base/content/pages/about.html
@@ -11,8 +11,7 @@ link: /about
 <h1>About Roq</h1>
 
 <p>Roq stands out in the Java development community as a powerful static site generator, bridging the gap between the
-  likes of Gatsby, Hugo, and the broader backend community.
-  As Andy Damevin explains, while tools like Jekyll once filled this space, they’ve become outdated and cumbersome,
+  likes of Gatsby, Hugo, and the broader backend community. While tools like Jekyll once filled this space, they’ve become outdated and cumbersome,
   especially with Ruby’s limitations.
   Roq offers a modern solution, leveraging Quarkus with no configuration needed, allowing developers to start quickly
   using Codestart and simply editing their site directory.
