--- a/roq/runtime/src/main/codestarts/quarkus/roq-codestart/base/content/index.html
+++ b/roq/runtime/src/main/codestarts/quarkus/roq-codestart/base/content/index.html
@@ -1,6 +1,6 @@
 ---
 title: Hello, world! I'm Roq
-description: I provide you with all the tools to generate static websites out of your Quarkus web application.
+description: I provide you with all the tools to generate static websites with Quarkus super-powers.
 name: I am ROQ
 simple-name: ROQ
 img: iamroq.png
@@ -10,3 +10,5 @@ social-github: quarkiverse/quarkus-roq
 social-linkedin: quarkusio
 layout: :theme/index
 ---
+
+Hello world
