--- a/roq/runtime/src/main/codestarts/quarkus/roq-codestart/base/content/index.html
+++ b/roq/runtime/src/main/codestarts/quarkus/roq-codestart/base/content/index.html
@@ -3,7 +3,7 @@ title: Hello, world! I'm Roq
 description: I provide you with all the tools to generate static websites with Quarkus super-powers.
 name: I am ROQ
 simple-name: ROQ
-img: iamroq.png
+image: iamroq.png
 social-twitter: quarkusio
 social-facebook:
 social-github: quarkiverse/quarkus-roq
